--- a/style.css
+++ b/style.css
@@ -104,3 +104,47 @@ body {
     left: 50%;
     transform: translate(-50%);
 }
+
+/* footer */
+
+.footer {
+    background-color: black;
+}
+
+.footer_wrap {
+    max-width: 1100px;
+    margin: 0 auto;
+}
+
+.footer_nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 30px;
+    margin-bottom: 60px;
+}
+
+.footer_logo {
+    height: 40px;
+}
+
+.footer_nav_list ul {
+    display: flex;
+}
+
+.footer_nav ul li {
+    margin: 0 30px;
+}
+
+.footer_nav_list a {
+    text-decoration: none;
+    color: white;
+    font-size: 18px;
+}
+
+.copyright {
+    color: white;
+    font-size: 12px;
+    text-align: center;
+    padding-bottom: 10px;
+}
