--- a/style.css
+++ b/style.css
@@ -107,6 +107,41 @@ body {
 
 /* info */
 
+.info {
+    max-width: 1100px;
+    margin: 0 auto;
+    padding: 90px 0;
+}
+
+.info_title {
+    text-align: center;
+    font-size: 38px;
+    margin-bottom: 60px;
+}
+
+.info_list {
+    margin: 0 auto; 
+    max-width: 700px;
+}
+
+.info_list li {
+    padding: 30px 0;
+    border-bottom: 1px solid #000;
+}
+
+.info_list li a {
+    text-decoration: none;
+    font-size: 18px;
+    color: black;
+}
+
+.info_border {
+    border: 1px solid black;
+    font-size: 11px;
+    margin: 0 30px;
+    padding: 5px 8px;
+}
+
 /* exapmle */
 
 /* sub */
