--- a/style.css
+++ b/style.css
@@ -144,6 +144,53 @@ body {
 
 /* exapmle */
 
+.example {
+    padding: 90px;
+    max-width: 1100px;
+    margin: 0 auto;
+}
+
+.example_title {
+    text-align: center;
+    font-size: 38px;
+    margin-bottom: 90px;
+}
+
+.example_list {
+    display: flex;
+    text-align: center;
+}
+
+.example_phot img {
+    width: 100%;
+}
+
+.example_name {
+    font-size: 24px;
+    margin-top: 30px;
+}
+
+.example_place {
+    font-size: 14px;
+    margin-top: 15px;
+}
+
+.example_details a img {
+    width: 300px;
+}
+
+.example_btn {
+    text-align: center;
+    margin-top: 80px;
+}
+
+.example_btn a {
+    text-decoration: none;
+    border: 1px solid black;
+    font-size: 20px;
+    color: black;
+    padding: 12px 40px;
+}
 /* sub */
 
 .sub {
