--- a/mobile.css
+++ b/mobile.css
@@ -119,3 +119,60 @@ div#test {
     width: 100%;
 }
 
+/* info */
+
+.info {
+    max-width: 1100px;
+    margin: 0 auto;
+    padding: 50px 20px;
+}
+
+.info_title {
+    text-align: center;
+    font-size: 24px;
+    margin-bottom: 0px;
+}
+
+.info_list {
+    margin: 0 auto; 
+    max-width: 100%;
+    margin-top: 0;
+}
+
+.info_list li {
+    padding: 30px 0;
+    border-bottom: 1px solid #000;
+}
+
+.info_list li a {
+    display: block;
+    text-decoration: none;
+    font-size: 18px;
+    color: black;
+}
+
+.info_list_block {
+    display: block;
+    margin-bottom: 15px;
+    font-size: 13px;
+}
+
+.info_border {
+    border: 1px solid black;
+    font-size: 11px;
+    margin: 0 30px;
+    padding: 5px 8px;
+}
+
+.example {
+    padding: 50px 20px;
+    max-width: 1100px;
+    margin: 0 auto;
+}
+
+.example_title {
+    text-align: center;
+    font-size: 24px;
+    margin-bottom: 0px;
+}
+
