--- a/mobile.css
+++ b/mobile.css
@@ -164,6 +164,8 @@ div#test {
     padding: 5px 8px;
 }
 
+/* .example */
+
 .example {
     padding: 50px 20px;
     max-width: 1100px;
@@ -222,4 +224,21 @@ div#test {
     font-size: 20px;
     color: black;
     padding: 12px 40px;
+}
+
+/* sub */
+
+.sub {
+    display: flex;
+    flex-direction: column;
+    padding-top: 50px;
+}
+
+.sub_img {
+    display: block;
+    width: 100%;
+}
+
+.sub_img img {
+    width: 100%;
 }
