--- a/mobile.css
+++ b/mobile.css
@@ -242,3 +242,55 @@ div#test {
 .sub_img img {
     width: 100%;
 }
+
+/* footer */
+
+.footer {
+    background-color: black;
+}
+
+.footer_wrap {
+    max-width: 1100px;
+    margin: 0 auto;
+}
+
+.footer_nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 50px;
+    margin-bottom: 30px;
+    flex-direction: column-reverse;
+}
+
+.footer_logo {
+    height: 40px;
+}
+
+.footer-nav__list {
+    margin-bottom: 20px;
+}
+
+.footer_nav_list ul {
+    flex-direction: column;
+    text-align: center;
+    display: flex;
+}
+
+.footer_nav ul li {
+    margin: 0 30px;
+    margin-bottom: 30px;
+}
+
+.footer_nav_list a {
+    text-decoration: none;
+    color: white;
+    font-size: 18px;
+}
+
+.copyright {
+    color: white;
+    font-size: 12px;
+    text-align: center;
+    padding-bottom: 10px;
+}
